[metadata]
name = rope-flax
version = 0.1.0
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/rope-flax
description = Rotary Position Embedding for Flax
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    einshape @ git+https://github.com/deepmind/einshape#egg=einshape
    flax
    jax
